MDL-31270: Fix out of bound exception thrown when reaching the last user in grading page and color for lock action in styles.css

--- a/mod/assign/styles.css
+++ b/mod/assign/styles.css
@@ -104,7 +104,7 @@ div.earlysubmission {
 .gradingbatchoperationsform { display: none; }
 .jsenabled .gradingbatchoperationsform { display: block; }
 
-.gradingtable tr.selectedrow { background-color: #ffeecc; }
-.gradingtable tr.unselectedrow { background-color: white; }
+.gradingtable tr.selectedrow td { background-color: #ffeecc; }
+.gradingtable tr.unselectedrow td { background-color: white; }
 
 .gradingtable .c0 div.selectall {margin-left: 7px;}
